--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,8 @@
     </style>
 
     <style name="Theme.BlogApp" parent="Base.Theme.BlogApp" />
+    <style name="round" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
+    
 </resources>
